fix padding on single-project. hide photos for archive-project on mobile

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -124,7 +124,22 @@ body.menu-active
 .project-photo-holder
   img 
     max-height: 300px
+    
+.single-project-drawings
+  padding-top: $header-height
   
+.single-project-photos
+  padding-bottom: $footer-height
+
+// ******************************************************
+
+// ARCHIVE PROJECT
+
+.archive-project-photos
+  display: none
+
+// ******************************************************
+
 // INDEX
 
 .index-container
