--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -85,13 +85,16 @@ body.menu-active
 .project-content-holder
   padding-top: $header-height
   padding-bottom: $footer-height
+  
+.single-project-drawings
+  padding-top: 0
+  
+.single-project-photos
+  padding-bottom: 0
 
 // ******************************************************
 
 // ARCHIVE PROJECT
-
-.archive-project-photos
-  display: none
   
 // ******************************************************
 
